@@ -1,10 +1,10 @@
 /*
  * ==================================================================== 
- * Name: $Id: RefObject_1.java,v 1.48 2008/07/04 14:56:01 hburger Exp $ 
+ * Name: $Id: RefObject_1.java,v 1.69 2008/12/15 03:15:30 hburger Exp $ 
  * Description: RefObject_1 class 
- * Revision: $Revision: 1.48 $ 
+ * Revision: $Revision: 1.69 $ 
  * Owner: OMEX AG, Switzerland,
- *        http://www.omex.ch Date: $Date: 2008/07/04 14:56:01 $
+ *        http://www.omex.ch Date: $Date: 2008/12/15 03:15:30 $
  * ====================================================================
  * 
  * This software is published under the BSD license as listed below.
@@ -74,10 +74,11 @@ import javax.jmi.reflect.RefPackage;
 import javax.resource.cci.InteractionSpec;
 
 import org.openmdx.base.accessor.generic.cci.LargeObject_1_0;
-import org.openmdx.base.accessor.generic.cci.ObjectFactory_1_3;
+import org.openmdx.base.accessor.generic.cci.ObjectFactory_1_1;
 import org.openmdx.base.accessor.generic.cci.Object_1_0;
 import org.openmdx.base.accessor.generic.cci.Structure_1_0;
-import org.openmdx.base.accessor.generic.spi.ViewObject_1_0;
+import org.openmdx.base.accessor.generic.spi.InteractionSpecs;
+import org.openmdx.base.accessor.generic.spi.Object_1_6;
 import org.openmdx.base.accessor.jmi.cci.JmiServiceException;
 import org.openmdx.base.accessor.jmi.cci.RefClass_1_0;
 import org.openmdx.base.accessor.jmi.cci.RefObject_1_0;
@@ -98,8 +99,6 @@ import org.openmdx.base.exception.RuntimeServiceException;
 import org.openmdx.base.exception.ServiceException;
 import org.openmdx.base.transaction.UnitOfWork_1_0;
 import org.openmdx.compatibility.base.dataprovider.cci.SystemAttributes;
-import org.openmdx.compatibility.base.dataprovider.layer.model.State_1_Attributes;
-import org.openmdx.compatibility.base.exception.StackedException;
 import org.openmdx.compatibility.base.marshalling.CachingMarshaller_1_0;
 import org.openmdx.compatibility.base.marshalling.Marshaller;
 import org.openmdx.compatibility.base.naming.Path;
@@ -110,6 +109,7 @@ import org.openmdx.compatibility.kernel.application.cci.Classes;
 import org.openmdx.kernel.exception.BasicException;
 import org.openmdx.kernel.log.SysLog;
 import org.openmdx.model1.accessor.basic.cci.ModelElement_1_0;
+import org.openmdx.model1.accessor.basic.cci.ModelUtils;
 import org.openmdx.model1.accessor.basic.cci.Model_1_0;
 import org.openmdx.model1.accessor.basic.cci.Model_1_2;
 import org.openmdx.model1.code.AggregationKind;
@@ -117,7 +117,7 @@ import org.openmdx.model1.code.ModelAttributes;
 import org.openmdx.model1.code.Multiplicities;
 import org.openmdx.model1.code.PrimitiveTypes;
 
-// ---------------------------------------------------------------------------
+//---------------------------------------------------------------------------
 /**
  * Implementation of RefObject_1_0.
  * <p>
@@ -136,17 +136,21 @@ public abstract class RefObject_1
         this.object = extendObject(refClass, object);
         RefPackage refPackage  = refClass.refOutermostPackage();
         if(
-            object instanceof ViewObject_1_0 &&
+            object instanceof Object_1_6 &&
             refPackage instanceof RefPackage_1_2 && 
             refPackage instanceof RefPackageFactory_1_0
         ) {
-            InteractionSpec objContext = ((ViewObject_1_0)object).getViewContext();
-            Object refContext = ((RefPackage_1_2)refPackage).refViewContext();
-            if(objContext == null || objContext.equals(refContext)){
+            InteractionSpec objContext = ((Object_1_6)object).getInteractionSpec();
+            Object refContext = ((RefPackage_1_2)refPackage).refInteractionSpec();
+            if(
+                InteractionSpecs.NULL == objContext || (
+                    objContext == null ? refContext == null : objContext.equals(refContext)
+                )
+            ){
                 this.refClass = (RefClass_1_0) refClass;
             } else {
                 this.refClass = (RefClass_1_0) (
-                   (RefPackageFactory_1_1) refPackage
+                    (RefPackageFactory_1_1) refPackage
                 ).getRefPackage(
                     objContext
                 ).refClass(
@@ -172,36 +176,35 @@ public abstract class RefObject_1
     ) {
         try {
             return ((RefPackage_1_0) refClass.refOutermostPackage())
-                .refObjectFactory()
-                .createObject(refClass.refMofId());
+            .refObjectFactory()
+            .createObject(refClass.refMofId());
         } catch (ServiceException exception) {
             throw new RuntimeServiceException(exception);
         }
     }
 
-    // -------------------------------------------------------------------------
+    /**
+     * Extend an object
+     * 
+     * @param refClass
+     * @param base
+     * 
+     * @return the extended object
+     * 
+     * @deprecated
+     */
     final private static Object_1_0 extendObject(
         RefClass refClass,
         Object_1_0 base
     ) {
         try {
-            if (base instanceof CloneableObject_1) {
-                CloneableObject_1 wrapper = (CloneableObject_1) base;
-                return (
-                    (ObjectFactory_1_3) ((RefPackage_1_0) refClass.refOutermostPackage()).refObjectFactory()
-                ).cloneObject(
-                    wrapper.getIdentity(),
-                    (Object_1_0) wrapper.objGetDelegate(),
-                    wrapper.isCompleteyDirty()
-                );
-            } 
-            else if (base.objGetClass().equals(refClass.refMofId())) {
+            if (base.objGetClass().equals(refClass.refMofId())) {
                 return base;
             } 
             else {
-                return ((RefPackage_1_0) refClass.refOutermostPackage())
-                    .refObjectFactory()
-                    .createObject(refClass.refMofId(), base);
+                RefPackage_1_0 refPackage = (RefPackage_1_0) refClass.refOutermostPackage();
+                ObjectFactory_1_1 refObjectFactory = (ObjectFactory_1_1) refPackage.refObjectFactory();
+                return refObjectFactory.createObject(refClass.refMofId(), base);
             }
         } 
         catch (ServiceException exception) {
@@ -217,10 +220,8 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("model element", elementDef)
-                },
-                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE
+                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE,
+                new BasicException.Parameter("model element", elementDef)
             ); 
         }
     }
@@ -230,9 +231,9 @@ public abstract class RefObject_1
         ModelElement_1_0 elementDef
     ) throws ServiceException {
         return 
-            !this.getModel().isOperationType(elementDef) && 
-            (this.getModel().isAttributeType(elementDef) || 
-             this.getModel().referenceIsStoredAsAttribute(elementDef));
+        !this.getModel().isOperationType(elementDef) && 
+        (this.getModel().isAttributeType(elementDef) || 
+                this.getModel().referenceIsStoredAsAttribute(elementDef));
     }
 
     // -------------------------------------------------------------------------
@@ -243,10 +244,8 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("model element", elementDef)
-                },
-                "model element not of type " + ModelAttributes.OPERATION
+                "model element not of type " + ModelAttributes.OPERATION,
+                new BasicException.Parameter("model element", elementDef)
             ); 
         }
     }
@@ -254,10 +253,10 @@ public abstract class RefObject_1
     // -------------------------------------------------------------------------
     final private ModelElement_1_0 getType(
         ModelElement_1_0 elementDef
-    )
-        throws ServiceException {
-        return this.getModel().getDereferencedType(
-            elementDef.values("type").get(0));
+    ) throws ServiceException {
+        return this.getModel().getElementType(
+            elementDef
+        );
     }
 
     // -------------------------------------------------------------------------
@@ -282,12 +281,10 @@ public abstract class RefObject_1
             if(feature == null) {                 
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_FOUND,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("class name", this.refClass().refMofId()),
-                        new BasicException.Parameter("feature", featureName)
-                    },
-                    "feature not found"
+                    BasicException.Code.NOT_FOUND,
+                    "feature not found",
+                    new BasicException.Parameter("class name", this.refClass().refMofId()),
+                    new BasicException.Parameter("feature", featureName)
                 ); 
             }
             return feature;
@@ -317,7 +314,6 @@ public abstract class RefObject_1
                     exception,
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ACTIVATION_FAILURE,
-                    null,
                     "Model_1_2 acquisition failed"
                 );
             }
@@ -335,7 +331,7 @@ public abstract class RefObject_1
 
     // -------------------------------------------------------------------------
     @SuppressWarnings("unchecked")
-    final Object getValue(
+    private final Object getValue(
         ModelElement_1_0 featureDef,
         Object qualifier,
         boolean marshal
@@ -352,16 +348,13 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("model element", featureDef)
-                },
-                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE
+                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE,
+                new BasicException.Parameter("model element", featureDef)
             ); 
         }
 
         ModelElement_1_0 type = this.getType(featureDef);
         String qualifiedTypeName = (String) type.values("qualifiedName").get(0);
-        String multiplicity = (String) featureDef.values("multiplicity").get(0);
 
         /**
          * Attribute or Reference stored as attribute. Don't care about
@@ -369,47 +362,16 @@ public abstract class RefObject_1
          * to get the required element from the collection.
          */
         if (isAttribute || isReferenceStoredAsAttribute) {
+            String multiplicity = ModelUtils.getMultiplicity(featureDef);
             if (qualifier != null) { 
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ASSERTION_FAILURE,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureDef),
-                        new BasicException.Parameter("qualifier", qualifier)
-                    },
-                    "qualifier must be null in case of attributes and references stored as attribute"
+                    "qualifier must be null in case of attributes and references stored as attribute",
+                    new BasicException.Parameter("feature", featureDef),
+                    new BasicException.Parameter("qualifier", qualifier)
                 ); 
             }
-
-            /**
-             * determine multiplicity of feature. In case of an attribute it is
-             * the modeled multiplicity. In case of a reference with a qualifier
-             * the multiplicity is <<list>> else the modeled multiplicity.
-             */
-            if (isReference) {
-                ModelElement_1_0 referencedEnd = this.getModel().getElement(
-                    featureDef.values("referencedEnd").get(0)
-                );
-                if(!referencedEnd.values("qualifierType").isEmpty()) {
-                    ModelElement_1_0 qualifierType = this.getModel().getDereferencedType(
-                        referencedEnd.values("qualifierType").get(0)
-                    );
-                    if (this.getModel().isNumericType(qualifierType)) {
-                        multiplicity = Multiplicities.LIST;
-                    } 
-                    else {
-                        multiplicity = Multiplicities.MAP;
-                    }
-                }
-                // map aggregation none, multiplicity 0..n, no qualifier to
-                // <<set>>
-                // in case <<list>> semantic is required it must be modeled as
-                // aggregation none, multiplicita 0..1, numeric qualifier
-                else if (Multiplicities.MULTI_VALUE.equals(multiplicity)) {
-                    multiplicity = Multiplicities.SET;
-                }
-            }
-
             // SINGLE_VALUE|OPTIONAL_VALUE
             if (
                 Multiplicities.SINGLE_VALUE.equals(multiplicity) || 
@@ -426,37 +388,40 @@ public abstract class RefObject_1
                     return BooleanMarshaller.getInstance(true).marshal(value);
                 } 
                 else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
-                    return DateTimeMarshaller.getInstance(true).marshal(value);
+                    return DateTimeMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
-                    return DateMarshaller.getInstance(true).marshal(value);
+                    return DateMarshaller.getInstance().marshal(value);
+                } 
+                else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                    return URIMarshaller.getInstance(true).marshal(value);
                 } 
                 else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
-                    return DurationMarshaller.getInstance(true).marshal(value);
+                    return DurationMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.SHORT.equals(qualifiedTypeName)) {
-                    return ShortMarshaller.getInstance(true).marshal(value);
+                    return ShortMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.INTEGER.equals(qualifiedTypeName)) {
-                    return IntegerMarshaller.getInstance(true).marshal(value);
+                    return IntegerMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.LONG.equals(qualifiedTypeName)) {
-                    return LongMarshaller.getInstance(true).marshal(value);
+                    return LongMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.DECIMAL.equals(qualifiedTypeName)) {
-                    return DecimalMarshaller.getInstance(true).marshal(value);
+                    return DecimalMarshaller.getInstance().marshal(value);
                 } 
                 else if (PrimitiveTypes.BINARY.equals(qualifiedTypeName)) {
                     return value;
                 } 
                 else if (this.getModel().isStructureType(type)) {
                     return this
-                        .toRefStructMarshaller(qualifiedTypeName)
-                        .marshal(value);
+                    .toRefStructMarshaller(qualifiedTypeName)
+                    .marshal(value);
                 } 
                 else if (
-                    this.getModel().isClassType(type) || 
-                    PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
+                        this.getModel().isClassType(type) || 
+                        PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
                 ) {
                     return ((Marshaller) this.refClass.refOutermostPackage()).marshal(value);
                 } 
@@ -477,18 +442,16 @@ public abstract class RefObject_1
                     throw new ServiceException(
                         BasicException.Code.DEFAULT_DOMAIN,
                         BasicException.Code.ASSERTION_FAILURE,
-                        new BasicException.Parameter[] {
-                            new BasicException.Parameter("feature", featureDef),
-                            new BasicException.Parameter("type", type)
-                        },
-                        "unsupported stream type. Supported are [string|binary]"
+                        "unsupported stream type. Supported are [string|binary]",
+                        new BasicException.Parameter("feature", featureDef),
+                        new BasicException.Parameter("type", type)
                     );
                 }
             }
             // LIST
             else if (
-                Multiplicities.LIST.equals(multiplicity) || 
-                Multiplicities.MULTI_VALUE.equals(multiplicity)
+                    Multiplicities.LIST.equals(multiplicity) || 
+                    Multiplicities.MULTI_VALUE.equals(multiplicity)
             ) {
                 List values = this.object.objGetList((String) featureDef.values("name").get(0));
                 if (!marshal) { 
@@ -501,37 +464,43 @@ public abstract class RefObject_1
                     return new MarshallingList(BooleanMarshaller.getInstance(true), values);
                 } 
                 else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
-                    return new MarshallingList(DateTimeMarshaller.getInstance(true), values);
+                    return new MarshallingList(DateTimeMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
                     return new MarshallingList(
-                        DateMarshaller.getInstance(true),
+                        DateMarshaller.getInstance(),
                         values
                     );
                 } 
+                else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                    return new MarshallingList(
+                        URIMarshaller.getInstance(true),
+                        values
+                    );
+                }                 
                 else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
-                    return new MarshallingList(DurationMarshaller.getInstance(true), values);
+                    return new MarshallingList(DurationMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.SHORT.equals(qualifiedTypeName)) {
-                    return new MarshallingList(ShortMarshaller.getInstance(true), values);
+                    return new MarshallingList(ShortMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.INTEGER.equals(qualifiedTypeName)) {
-                    return new MarshallingList(IntegerMarshaller.getInstance(true), values);
+                    return new MarshallingList(IntegerMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.LONG.equals(qualifiedTypeName)) {
                     return new MarshallingList(
-                        LongMarshaller.getInstance(true),
+                        LongMarshaller.getInstance(),
                         values);
                 } 
                 else if (PrimitiveTypes.DECIMAL.equals(qualifiedTypeName)) {
-                    return new MarshallingList(DecimalMarshaller.getInstance(true), values);
+                    return new MarshallingList(DecimalMarshaller.getInstance(), values);
                 } 
                 else if (this.getModel().isStructureType(type)) {
                     return new MarshallingList(this.toRefStructMarshaller(qualifiedTypeName), values);
                 } 
                 else if (
-                    this.getModel().isClassType(type) || 
-                    PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
+                        this.getModel().isClassType(type) || 
+                        PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
                 ) {
                     return new MarshallingList((Marshaller) this.refClass.refOutermostPackage(), values);
                 } 
@@ -552,41 +521,47 @@ public abstract class RefObject_1
                     return new MarshallingSet(BooleanMarshaller.getInstance(true), values);
                 } 
                 else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
-                    return new MarshallingSet(DateTimeMarshaller.getInstance(true), values);
+                    return new MarshallingSet(DateTimeMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
                     return new MarshallingSet(
-                        DateMarshaller.getInstance(true),
+                        DateMarshaller.getInstance(),
+                        values
+                    );
+                } 
+                else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                    return new MarshallingSet(
+                        URIMarshaller.getInstance(true),
                         values
                     );
                 } 
                 else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
-                    return new MarshallingSet(DurationMarshaller.getInstance(true), values);
+                    return new MarshallingSet(DurationMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.SHORT.equals(qualifiedTypeName)) {
                     return new MarshallingSet(
-                        ShortMarshaller.getInstance(true),
+                        ShortMarshaller.getInstance(),
                         values
                     );
                 } 
                 else if (PrimitiveTypes.INTEGER.equals(qualifiedTypeName)) {
-                    return new MarshallingSet(IntegerMarshaller.getInstance(true), values);
+                    return new MarshallingSet(IntegerMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.LONG.equals(qualifiedTypeName)) {
                     return new MarshallingSet(
-                        LongMarshaller.getInstance(true),
+                        LongMarshaller.getInstance(),
                         values
                     );
                 } 
                 else if (PrimitiveTypes.DECIMAL.equals(qualifiedTypeName)) {
-                    return new MarshallingSet(DecimalMarshaller.getInstance(true), values);
+                    return new MarshallingSet(DecimalMarshaller.getInstance(), values);
                 } 
                 else if (this.getModel().isStructureType(type)) {
                     return new MarshallingSet(this.toRefStructMarshaller(qualifiedTypeName), values);
                 } 
                 else if (
-                    this.getModel().isClassType(type) || 
-                    PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
+                        this.getModel().isClassType(type) || 
+                        PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
                 ) {
                     return new MarshallingSet((Marshaller) this.refClass.refOutermostPackage(), values);
                 } 
@@ -607,32 +582,35 @@ public abstract class RefObject_1
                     return new MarshallingSortedMap(BooleanMarshaller.getInstance(true), values);
                 } 
                 else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(DateTimeMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(DateTimeMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(DateMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(DateMarshaller.getInstance(), values);
+                } 
+                else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                    return new MarshallingSortedMap(URIMarshaller.getInstance(true), values);
                 } 
                 else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(DurationMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(DurationMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.SHORT.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(ShortMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(ShortMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.INTEGER.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(IntegerMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(IntegerMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.LONG.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(LongMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(LongMarshaller.getInstance(), values);
                 } 
                 else if (PrimitiveTypes.DECIMAL.equals(qualifiedTypeName)) {
-                    return new MarshallingSortedMap(DecimalMarshaller.getInstance(true), values);
+                    return new MarshallingSortedMap(DecimalMarshaller.getInstance(), values);
                 } 
                 else if (this.getModel().isStructureType(type)) {
                     return new MarshallingSortedMap(this.toRefStructMarshaller(qualifiedTypeName), values);
                 } 
                 else if (
-                    this.getModel().isClassType(type) || 
-                    PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
+                        this.getModel().isClassType(type) || 
+                        PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
                 ) {
                     return new MarshallingSortedMap((Marshaller) this.refClass.refOutermostPackage(), values);
                 } 
@@ -652,11 +630,9 @@ public abstract class RefObject_1
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ASSERTION_FAILURE,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureDef),
-                        new BasicException.Parameter("type", type)
-                    },
-                    "unsupported multiplicity. Supported are [set|list|sparsearray|map|stream|0..n|0..1|1..1]"
+                    "unsupported multiplicity. Supported are [set|list|sparsearray|map|stream|0..n|0..1|1..1]",
+                    new BasicException.Parameter("feature", featureDef),
+                    new BasicException.Parameter("type", type)
                 );
             }
         }
@@ -666,6 +642,7 @@ public abstract class RefObject_1
          */
         else if (isReference) {
 
+            String multiplicity = (String) featureDef.values("multiplicity").get(0);
             // Class type qualifier
             if (qualifier instanceof RefObject) {
 
@@ -681,8 +658,8 @@ public abstract class RefObject_1
                 ).values("qualifierName").get(0);
                 int pos = 0;
                 if (
-                    ((pos = qualifierName.indexOf("Container")) >= 0) || 
-                    ((pos = qualifierName.indexOf("container")) >= 0)
+                        ((pos = qualifierName.indexOf("Container")) >= 0) || 
+                        ((pos = qualifierName.indexOf("container")) >= 0)
                 ) {
                     qualifierName = qualifierName.substring(0, pos);
                 }
@@ -692,9 +669,8 @@ public abstract class RefObject_1
                             Quantors.THERE_EXISTS,
                             exposedEndName,
                             FilterOperators.IS_IN,
-                            new Path[] {
-                                this.object.objGetPath()
-                            })
+                            this.object.objGetPath()
+                        )
                     }
                 );
                 return new RefContainer_1((RefRootPackage_1) this.refClass.refOutermostPackage(), container);
@@ -709,52 +685,48 @@ public abstract class RefObject_1
                 // navigation to parent object is performed locally by removing
                 // the last to object path components
                 if(
-                    AggregationKind.SHARED.equals(referencedEnd.values("aggregation").get(0)) || 
-                    AggregationKind.COMPOSITE.equals(referencedEnd.values("aggregation").get(0))
+                        AggregationKind.SHARED.equals(referencedEnd.values("aggregation").get(0)) || 
+                        AggregationKind.COMPOSITE.equals(referencedEnd.values("aggregation").get(0))
                 ) {
-                    return rootPkg.refObject(new Path(this.refMofId()).getParent().getParent().toString());
+                    return rootPkg.refObject(new Path(this.refMofId()).getParent().getParent());
                 } 
                 else {
                     if(
-                        (qualifier instanceof String) && 
-                        (((String) qualifier).indexOf(';') >= 0)
+                            (qualifier instanceof String) && 
+                            (((String) qualifier).indexOf(';') >= 0)
                     ) {
                         return rootPkg.marshal(
                             rootPkg.refObjectFactory().getObject(
                                 this.refGetPath().getDescendant(
-                                    new String[]{
-                                        (String)featureDef.values("name").get(0), 
-                                        (String) qualifier
-                                    }
+                                    (String)featureDef.values("name").get(0), 
+                                    (String) qualifier
                                 )
                             )
                         );
                     } 
                     else {
                         String feature = (String) featureDef.values("name").get(0);
-                        String objectClass = this.refClass().refMofId();
-                        if (
-                            this.getModel().isSubtypeOf(objectClass, "org:openmdx:base:ExtentCapable") && 
-                            this.getModel().isSubtypeOf(objectClass,"org:openmdx:compatibility:state1:BasicState") && 
-                            this.object.objIsPersistent() && 
-                            !this.object.objIsNew() && 
-                            !this.object.objIsDeleted()
-                        ) {
-                            feature += SystemAttributes.USE_OBJECT_IDENTITY_HINT;
-                        }
+//                      String objectClass = this.refClass().refMofId();
+//                      if (
+//                          this.getModel().isSubtypeOf(objectClass, "org:openmdx:base:ExtentCapable") && 
+//                          this.getModel().isSubtypeOf(objectClass,"org:openmdx:state2:BasicState") && 
+//                          this.object.objIsPersistent() && 
+//                          !this.object.objIsNew() && 
+//                          !this.object.objIsDeleted()
+//                        ) {
+//                          feature += SystemAttributes.USE_OBJECT_IDENTITY_HINT;
+//                        }
                         FilterableMap container = this.object.objGetContainer(feature);
                         Object object = null;
                         try {
                             object = qualifier == null 
-                                ? new RefContainer_1(rootPkg, container) 
-                                : rootPkg.marshal(container.get(qualifier.toString()));
+                            ? new RefContainer_1(rootPkg, container) 
+                            : rootPkg.marshal(container.get(qualifier.toString()));
                         } 
                         catch (ServiceException e) {
-                            // in case of 0..1 multiplicity allow null as return
-                            // value
+                            // in case of 0..1 multiplicity allow null as return value
                             if(
-                                rootPkg.getThrowNotFoundIfNull() || 
-                                (e.getExceptionCode() != StackedException.NOT_FOUND) || 
+                                (e.getExceptionCode() != BasicException.Code.NOT_FOUND) || 
                                 !Multiplicities.OPTIONAL_VALUE.equals(multiplicity)
                             ) { 
                                 throw new JmiServiceException(
@@ -787,10 +759,8 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("model element", featureDef)
-                },
-                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE
+                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE,
+                new BasicException.Parameter("model element", featureDef)
             ); 
         }
 
@@ -816,11 +786,9 @@ public abstract class RefObject_1
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ASSERTION_FAILURE,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureDef),
-                        new BasicException.Parameter("type", type)
-                    },
-                    "unsupported stream type. Supported are [string|binary]"
+                    "unsupported stream type. Supported are [string|binary]",
+                    new BasicException.Parameter("feature", featureDef),
+                    new BasicException.Parameter("type", type)
                 );
             }
         } 
@@ -828,11 +796,9 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("feature", featureDef),
-                    new BasicException.Parameter("type", type)
-                },
-                "unsupported multiplicity. Supported are [stream]"
+                "unsupported multiplicity. Supported are [stream]",
+                new BasicException.Parameter("feature", featureDef),
+                new BasicException.Parameter("type", type)
             );
         }
     }
@@ -867,9 +833,9 @@ public abstract class RefObject_1
                 }
             }
             if (
-                Multiplicities.OPTIONAL_VALUE.equals(multiplicity) || 
-                Multiplicities.SINGLE_VALUE.equals(multiplicity) || 
-                Multiplicities.STREAM.equals(multiplicity)
+                    Multiplicities.OPTIONAL_VALUE.equals(multiplicity) || 
+                    Multiplicities.SINGLE_VALUE.equals(multiplicity) || 
+                    Multiplicities.STREAM.equals(multiplicity)
             ) {
                 if (PrimitiveTypes.BOOLEAN.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
@@ -880,43 +846,49 @@ public abstract class RefObject_1
                 else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        DateTimeMarshaller.getInstance(true).unmarshal(value)
+                        DateTimeMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        DateMarshaller.getInstance(true).unmarshal(value)
+                        DateMarshaller.getInstance().unmarshal(value)
+                    );
+                } 
+                else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                    this.object.objSetValue(
+                        (String) featureDef.values("name").get(0), 
+                        URIMarshaller.getInstance(true).unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        DurationMarshaller.getInstance(true).unmarshal(value)
+                        DurationMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.SHORT.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        ShortMarshaller.getInstance(true).unmarshal(value)
+                        ShortMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.INTEGER.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        IntegerMarshaller.getInstance(true).unmarshal(value)
+                        IntegerMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.LONG.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        LongMarshaller.getInstance(true).unmarshal(value)
+                        LongMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.DECIMAL.equals(qualifiedTypeName)) {
                     this.object.objSetValue(
                         (String) featureDef.values("name").get(0), 
-                        DecimalMarshaller.getInstance(true).unmarshal(value)
+                        DecimalMarshaller.getInstance().unmarshal(value)
                     );
                 } 
                 else if (PrimitiveTypes.BINARY.equals(qualifiedTypeName)) {
@@ -951,21 +923,21 @@ public abstract class RefObject_1
             else {
                 Object newValue = null;
                 if (
-                    (value != null) && 
-                    (value.getClass().isArray())
+                        (value != null) && 
+                        (value.getClass().isArray())
                 ) {
                     newValue = new ArrayList();
                     for (int i = 0; i < Array.getLength(value); i++) {
                         ((List) newValue).add(
                             (value instanceof short[]) 
-                                ?  new Short(((short[]) value)[i])
-                                : (value instanceof int[]) 
-                                    ? new Integer(((int[]) value)[i])
-                                    : (value instanceof long[]) 
-                                        ? new Long(((long[]) value)[i])
-                                        : (value instanceof boolean[]) 
-                                            ? Boolean.valueOf(((boolean[]) value)[i])
-                                            : ((Object[]) value)[i]
+                            ?  new Short(((short[]) value)[i])
+                            : (value instanceof int[]) 
+                            ? new Integer(((int[]) value)[i])
+                            : (value instanceof long[]) 
+                            ? new Long(((long[]) value)[i])
+                            : (value instanceof boolean[]) 
+                            ? Boolean.valueOf(((boolean[]) value)[i])
+                                : ((Object[]) value)[i]
                         );
                     }
                 } 
@@ -979,8 +951,8 @@ public abstract class RefObject_1
                         if (newValue instanceof Collection) {
                             int i = 0;
                             for(
-                                Iterator j = ((Collection) newValue).iterator(); 
-                                j.hasNext();
+                                    Iterator j = ((Collection) newValue).iterator(); 
+                                    j.hasNext();
                             ) {
                                 ((SortedMap) values).put(
                                     new Integer(i++), 
@@ -993,8 +965,8 @@ public abstract class RefObject_1
                         }
                     } 
                     else if (
-                        Multiplicities.LIST.equals(multiplicity) || 
-                        Multiplicities.MULTI_VALUE.equals(multiplicity)
+                            Multiplicities.LIST.equals(multiplicity) || 
+                            Multiplicities.MULTI_VALUE.equals(multiplicity)
                     ) {
                         ((List) values).clear();
                         if (newValue != null) {
@@ -1009,11 +981,9 @@ public abstract class RefObject_1
                         throw new ServiceException(
                             BasicException.Code.DEFAULT_DOMAIN,
                             BasicException.Code.ASSERTION_FAILURE,
-                            new BasicException.Parameter[] {
-                                new BasicException.Parameter("feature", featureDef),
-                                new BasicException.Parameter("multiplicity", multiplicity),
-                            },
-                            "unknown multiplicity"
+                            "unknown multiplicity",
+                            new BasicException.Parameter("feature", featureDef),
+                            new BasicException.Parameter("multiplicity", multiplicity)
                         );
                     }
                 }
@@ -1027,11 +997,9 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("feature", featureDef),
-                    new BasicException.Parameter("type", type)
-                },
-                "set supported only for attributes and references stored as attributes"
+                "set supported only for attributes and references stored as attributes",
+                new BasicException.Parameter("feature", featureDef),
+                new BasicException.Parameter("type", type)
             );
         }
     }
@@ -1052,10 +1020,8 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("model element", featureDef)
-                },
-                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE
+                "model element not of type " + ModelAttributes.STRUCTURAL_FEATURE,
+                new BasicException.Parameter("model element", featureDef)
             ); 
         }
 
@@ -1082,11 +1048,9 @@ public abstract class RefObject_1
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ASSERTION_FAILURE,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureDef),
-                        new BasicException.Parameter("type", type)
-                    },
-                    "unsupported stream type. Supported are [string|binary]"
+                    "unsupported stream type. Supported are [string|binary]",
+                    new BasicException.Parameter("feature", featureDef),
+                    new BasicException.Parameter("type", type)
                 );
             }
         } 
@@ -1094,11 +1058,9 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("feature", featureDef),
-                    new BasicException.Parameter("type", type)
-                },
-                "unsupported multiplicity. Supported are [stream]"
+                "unsupported multiplicity. Supported are [stream]",
+                new BasicException.Parameter("feature", featureDef),
+                new BasicException.Parameter("type", type)
             );
         }
     }
@@ -1122,8 +1084,8 @@ public abstract class RefObject_1
         String qualifiedNameResultType = null;
         String qualifiedNameInParamType = null;
         for (
-            Iterator<?> i = featureDef.values("content").iterator(); 
-            i.hasNext();
+                Iterator<?> i = featureDef.values("content").iterator(); 
+                i.hasNext();
         ) {
             ModelElement_1_0 paramDef = this.getModel().getElement(i.next());
             ModelElement_1_0 paramDefType = this.getType(paramDef);
@@ -1138,28 +1100,24 @@ public abstract class RefObject_1
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("operation", featureDef)
-                },
-                "no parameter with name \"in\" defined for operation"
+                "no parameter with name \"in\" defined for operation",
+                new BasicException.Parameter("operation", featureDef)
             ); 
         }
         if (qualifiedNameResultType == null) { 
             throw new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
                 BasicException.Code.ASSERTION_FAILURE,
-                new BasicException.Parameter[] {
-                    new BasicException.Parameter("operation", featureDef)
-                },
-                "no parameter with name \"result\" defined for operation"
+                "no parameter with name \"result\" defined for operation",
+                new BasicException.Parameter("operation", featureDef)
             ); 
         }
-        
+
         // Create in param as JMI struct
         RefStruct_1_0 param = null;
         if (
-            (args.size() == 1) && 
-            (args.get(0) instanceof RefStruct_1_0)
+                (args.size() == 1) && 
+                (args.get(0) instanceof RefStruct_1_0)
         ) { 
             param = (RefStruct_1_0)args.get(0);
         }
@@ -1169,7 +1127,7 @@ public abstract class RefObject_1
                 args
             );
         }
-        
+
         // invoke operation
         Structure_1_0 unmarshalledParam = (Structure_1_0)this.toRefStructMarshaller(
             qualifiedNameInParamType
@@ -1177,7 +1135,7 @@ public abstract class RefObject_1
         return this.toRefStructMarshaller(qualifiedNameResultType).marshal(
             invokeOperationInUnitOfWork(((Boolean) featureDef.values("isQuery").get(0)).booleanValue()) ? 
                 this.object.objInvokeOperationInUnitOfWork((String) featureDef.values("name").get(0), unmarshalledParam) :
-                this.object.objInvokeOperation((String) featureDef.values("name").get(0), unmarshalledParam) 
+                    this.object.objInvokeOperation((String) featureDef.values("name").get(0), unmarshalledParam) 
         );
     }
 
@@ -1197,7 +1155,7 @@ public abstract class RefObject_1
             return unitOfWork.isTransactional() && unitOfWork.isOptimistic();
         }
     }
-    
+
     // -------------------------------------------------------------------------
     @SuppressWarnings("unchecked")
     final public Object refGetValue(
@@ -1214,11 +1172,10 @@ public abstract class RefObject_1
                 throw new JmiServiceException(
                     new ServiceException(
                         BasicException.Code.DEFAULT_DOMAIN,
-                        StackedException.NOT_SUPPORTED,
-                        new BasicException.Parameter[] {
-                            new BasicException.Parameter("values", values)
-                        },
-                        "operation only supported for features instanceof [List|SparseArray]"),
+                        BasicException.Code.NOT_SUPPORTED,
+                        "operation only supported for features instanceof [List|SparseArray]",
+                        new BasicException.Parameter("values", values)
+                    ),
                     this);
             }
         } catch (ServiceException e) {
@@ -1257,11 +1214,9 @@ public abstract class RefObject_1
                 throw new JmiServiceException(
                     new ServiceException(
                         BasicException.Code.DEFAULT_DOMAIN,
-                        StackedException.NOT_SUPPORTED,
-                        new BasicException.Parameter[] {
-                            new BasicException.Parameter("value", value)
-                        },
-                        "operation only supported for features instanceof [List|SparseArray]"
+                        BasicException.Code.NOT_SUPPORTED,
+                        "operation only supported for features instanceof [List|SparseArray]",
+                        new BasicException.Parameter("value", value)
                     ),
                     this
                 );
@@ -1278,12 +1233,10 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureName),
-                        new BasicException.Parameter("value", value)
-                    },
-                    "index must be 0 in case of a non-collection value"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "index must be 0 in case of a non-collection value",
+                    new BasicException.Parameter("feature", featureName),
+                    new BasicException.Parameter("value", value)
                 ), this
             );
         }
@@ -1302,7 +1255,6 @@ public abstract class RefObject_1
     ) {
         Object map = null;
         Object value = null;
-        RefRootPackage_1 rootPkg = (RefRootPackage_1) this.refClass.refOutermostPackage();
         try {
             map = this.getValue(this.getFeature(featureName), null);
         } 
@@ -1323,30 +1275,14 @@ public abstract class RefObject_1
         else {
             throw new JmiServiceException(
                 new ServiceException(
-                    StackedException.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("feature", featureName),
-                        new BasicException.Parameter("value", map)
-                    },
-                    "index must be 0 in case of a non-collection value"
+                    BasicException.Code.DEFAULT_DOMAIN,
+                    BasicException.Code.NOT_SUPPORTED,
+                    "index must be 0 in case of a non-collection value",
+                    new BasicException.Parameter("feature", featureName),
+                    new BasicException.Parameter("value", map)
                 ), 
                 this
             );
-        }
-        if ((value == null) && rootPkg.getThrowNotFoundIfNull()) { 
-            throw new JmiServiceException(
-                new ServiceException(
-                    BasicException.Code.DEFAULT_DOMAIN,
-                    BasicException.Code.NOT_FOUND,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("object", this.refGetPath()),
-                        new BasicException.Parameter("feature", featureName),
-                        new BasicException.Parameter("qualifier", qualifier)
-                    },
-                    "object not found"
-                )
-            ); 
         }
         return value;
     }
@@ -1361,8 +1297,8 @@ public abstract class RefObject_1
             ModelElement_1_0 featureDef = this.getFeature(featureName);
             Object value = null;
             if (
-                model.isAttributeType(featureDef) || 
-                model.referenceIsStoredAsAttribute(featureDef)
+                    model.isAttributeType(featureDef) || 
+                    model.referenceIsStoredAsAttribute(featureDef)
             ) {
                 // TODO: check modeled qualifier type instead of qualifier class
                 if (qualifier instanceof String) {
@@ -1372,7 +1308,7 @@ public abstract class RefObject_1
                 else {
                     value = this.refGetValue(
                         featureName,
-                        ((Integer) IntegerMarshaller.getInstance(true).unmarshal(qualifier)).intValue()
+                        ((Integer) IntegerMarshaller.getInstance().unmarshal(qualifier)).intValue()
                     );
                 }
             } 
@@ -1417,10 +1353,10 @@ public abstract class RefObject_1
         try {
             RefPackage refPackage = refOutermostPackage();
             Object viewContext = refPackage instanceof RefPackage_1_2 
-                ? ((RefPackage_1_2) refPackage).refViewContext()
+            ? ((RefPackage_1_2) refPackage).refInteractionSpec()
                 : null;
             Object values = viewContext == null 
-                ? this.getValue(this.getFeature(featureName), null) 
+            ? this.getValue(this.getFeature(featureName), null) 
                 : null;
 
             // set indexed element in case of Colletion values. For convencience
@@ -1442,11 +1378,9 @@ public abstract class RefObject_1
                     throw new JmiServiceException(
                         new ServiceException(
                             BasicException.Code.DEFAULT_DOMAIN,
-                            StackedException.NOT_SUPPORTED,
-                            new BasicException.Parameter[] {
-                                new BasicException.Parameter("values", values)
-                            },
-                            "operation only supported for features instanceof [List|SparseArray]"
+                            BasicException.Code.NOT_SUPPORTED,
+                            "operation only supported for features instanceof [List|SparseArray]",
+                            new BasicException.Parameter("values", values)
                         ),
                         this
                     );
@@ -1464,11 +1398,9 @@ public abstract class RefObject_1
                 throw new JmiServiceException(
                     new ServiceException(
                         BasicException.Code.DEFAULT_DOMAIN,
-                        StackedException.NOT_SUPPORTED,
-                        new BasicException.Parameter[] {
-                            new BasicException.Parameter("values", values)
-                        },
-                        "index must be 0 for non-collection values"
+                        BasicException.Code.NOT_SUPPORTED,
+                        "index must be 0 for non-collection values",
+                        new BasicException.Parameter("values", values)
                     ), 
                     this
                 );
@@ -1521,11 +1453,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [List]"                   
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [List]",
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -1563,12 +1493,10 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("value class", values.getClass().getName()),
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [Set|List|SparseArray|Container]"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [Set|List|SparseArray|Container]",
+                    new BasicException.Parameter("value class", values.getClass().getName()),
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -1600,11 +1528,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [List|SparseArray]"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [List|SparseArray]",
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -1624,9 +1550,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(e, this);
         }
         if (
-            values instanceof List || 
-            values instanceof Set || 
-            values instanceof org.openmdx.compatibility.base.collection.Container
+                values instanceof List || 
+                values instanceof Set || 
+                values instanceof org.openmdx.compatibility.base.collection.Container
         ) {
             try {
                 ((Collection<?>) values).clear();
@@ -1647,11 +1573,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [Set|List|SparseArray|Container]"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [Set|List|SparseArray|Container]",
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -1672,10 +1596,8 @@ public abstract class RefObject_1
                 throw new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
                     BasicException.Code.ASSERTION_FAILURE,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("objType", objType),
-                    },
-                    "objType must be a class type"
+                    "objType must be a class type",
+                    new BasicException.Parameter("objType", objType)
                 ); 
             }
             return this.getModel().isInstanceof(this.object, objType);
@@ -1817,9 +1739,9 @@ public abstract class RefObject_1
         } 
         catch (ServiceException e) {
             String exceptionType = null;
-            for (int i = 0; i < e.getExceptionStack().getParameters().length; i++) {
-                if ("typeName".equals(e.getExceptionStack().getParameters()[i].getName())) {
-                    exceptionType = e.getExceptionStack().getParameters()[i].getValue();
+            for (int i = 0; i < e.getCause().getParameters().length; i++) {
+                if ("typeName".equals(e.getCause().getParameters()[i].getName())) {
+                    exceptionType = e.getCause().getParameters()[i].getValue();
                     break;
                 }
             }
@@ -1831,7 +1753,7 @@ public abstract class RefObject_1
                 packageName = packageName.substring(
                     0,
                     packageName.lastIndexOf(':')).replace(':', '.'
-                );
+                    );
                 String typeName = exceptionType.substring(exceptionType.lastIndexOf(":") + 1);
                 try {
                     Class exceptionClass = Classes.getApplicationClass(
@@ -1844,9 +1766,9 @@ public abstract class RefObject_1
                             ServiceException.class
                         }
                     );
-                    throw (RefException) constructor.newInstance(new Object[] {
+                    throw (RefException) constructor.newInstance(
                         e
-                    });
+                    );
                 } 
                 catch (InstantiationException dummy) {
                     throw new RefException_1(e);
@@ -1895,7 +1817,7 @@ public abstract class RefObject_1
     final public RefPackage refImmediatePackage(
     ) {
         return "org:openmdx:base:Authority".equals(this.refClass().refMofId())
-            ? this.refOutermostPackage().refPackage(this.refGetPath().get(0))
+        ? this.refOutermostPackage().refPackage(this.refGetPath().get(0))
             : this.refClass().refImmediatePackage();
     }
 
@@ -1916,7 +1838,7 @@ public abstract class RefObject_1
             } 
             else {
                 if (
-                    !refIsDeleted() &&
+                    !this.object.objIsDeleted() &&
                     this.getModel().isSubtypeOf(objectClass, "org:openmdx:base:ExtentCapable") && 
                     this.object.objDefaultFetchGroup().contains(SystemAttributes.OBJECT_IDENTITY)
                 ) {
@@ -1961,8 +1883,8 @@ public abstract class RefObject_1
                         thisElement != null && 
                         thisElement.equals(getElementInError(serviceException));
                     violationTarget[i] = thisElementInError 
-                        ? new JmiServiceException(serviceException, this)
-                        : new JmiServiceException(serviceException);
+                    ? new JmiServiceException(serviceException, this)
+                    : new JmiServiceException(serviceException);
                 }
                 return Arrays.asList(violationTarget);
             }
@@ -1988,8 +1910,8 @@ public abstract class RefObject_1
         ServiceException serviceException
     ) {
         return serviceException
-            .getCause(BasicException.Code.DEFAULT_DOMAIN)
-            .getParameter("elementInError");
+        .getCause(BasicException.Code.DEFAULT_DOMAIN)
+        .getParameter("elementInError");
     }
 
     // -------------------------------------------------------------------------
@@ -2012,8 +1934,7 @@ public abstract class RefObject_1
         throw new JmiServiceException(
             new ServiceException(
                 BasicException.Code.DEFAULT_DOMAIN,
-                StackedException.NOT_SUPPORTED,
-                null,
+                BasicException.Code.NOT_SUPPORTED,
                 "Write protection no longer supported"
             ), 
             this
@@ -2156,24 +2077,6 @@ public abstract class RefObject_1
     }
 
     // -------------------------------------------------------------------------
-    private boolean isUnmodifiable(
-        ModelElement_1_0 featureDef
-    ) {
-        if(
-            (refDelegate() instanceof ViewObject_1_0) &&
-            refIsPersistent() 
-        ) {
-            String feature = (String) featureDef.values("name").get(0);
-            return 
-                State_1_Attributes.STATE_VALID_FROM.equals(feature) ||
-                State_1_Attributes.STATE_VALID_TO.equals(feature);
-        } 
-        else {
-            return false;
-        }
-    }
-
-    // -------------------------------------------------------------------------
     @SuppressWarnings("unchecked")
     final public void refInitialize(
         boolean setRequiredToNull,
@@ -2182,29 +2085,29 @@ public abstract class RefObject_1
         try {
             ModelElement_1_0 elementDef = ((RefMetaObject_1)this.refMetaObject()).getElementDef();
             for (
-                Iterator<ModelElement_1_0> i = ((Map) elementDef.values("allFeature").get(0)).values().iterator(); 
-                i.hasNext();
+                    Iterator<ModelElement_1_0> i = ((Map) elementDef.values("allFeature").get(0)).values().iterator(); 
+                    i.hasNext();
             ) {
                 ModelElement_1_0 featureDef = i.next();
                 if (
-                    this.isAttributeOrReferenceStoredAsAttribute(featureDef) && 
-                    ((Boolean) featureDef.values("isChangeable").get(0)).booleanValue() && 
-                    !isUnmodifiable(featureDef)
+                        this.isAttributeOrReferenceStoredAsAttribute(featureDef) && 
+                        ((Boolean) featureDef.values("isChangeable").get(0)).booleanValue() 
+                    //  && !isUnmodifiable(featureDef)
                 ) {
                     String multiplicity = (String) featureDef.values("multiplicity").get(0);
-                    ModelElement_1_0 type = this.getModel().getDereferencedType(featureDef.values("type").get(0));
+                    ModelElement_1_0 type = this.getModel().getElementType(featureDef);
                     if (Multiplicities.OPTIONAL_VALUE.equals(multiplicity)) {
                         if (setOptionalToNull) {
                             this.setValue(featureDef, null);
                         }
                     } 
                     else if (
-                        Multiplicities.SET.equals(multiplicity) || 
-                        Multiplicities.LIST.equals(multiplicity) || 
-                        Multiplicities.MULTI_VALUE.equals(multiplicity) || 
-                        Multiplicities.SPARSEARRAY.equals(multiplicity)
+                            Multiplicities.SET.equals(multiplicity) || 
+                            Multiplicities.LIST.equals(multiplicity) || 
+                            Multiplicities.MULTI_VALUE.equals(multiplicity) || 
+                            Multiplicities.SPARSEARRAY.equals(multiplicity)
                     ) {
-                        this.setValue(featureDef, new Object[] {});
+                        this.setValue(featureDef, EMPTY_OBJECT_ARRAY);
                     } 
                     else if (Multiplicities.SINGLE_VALUE.equals(multiplicity)) {
                         if (setRequiredToNull) {
@@ -2221,21 +2124,27 @@ public abstract class RefObject_1
                             else if (PrimitiveTypes.DATETIME.equals(qualifiedTypeName)) {
                                 this.setValue(
                                     featureDef, 
-                                    DateTimeMarshaller.getInstance(true).marshal
-                                        (org.openmdx.base.text.format.DateFormat.getInstance().format(new Date())
+                                    DateTimeMarshaller.getInstance().marshal
+                                    (org.openmdx.base.text.format.DateFormat.getInstance().format(new Date())
                                     )
                                 );
                             } 
                             else if (PrimitiveTypes.DATE.equals(qualifiedTypeName)) {
                                 this.setValue(
                                     featureDef, 
-                                    DateMarshaller.getInstance(true).marshal("20000101")
+                                    DateMarshaller.getInstance().marshal("20000101")
+                                );
+                            } 
+                            else if (PrimitiveTypes.ANYURI.equals(qualifiedTypeName)) {
+                                this.setValue(
+                                    featureDef, 
+                                    URIMarshaller.getInstance(true).marshal("20000101")
                                 );
                             } 
                             else if (PrimitiveTypes.DURATION.equals(qualifiedTypeName)) {
                                 this.setValue(
                                     featureDef, 
-                                    DurationMarshaller.getInstance(true).marshal("P0M")
+                                    DurationMarshaller.getInstance().marshal("P0M")
                                 );
                             } 
                             else if (PrimitiveTypes.SHORT .equals(qualifiedTypeName)) {
@@ -2259,8 +2168,8 @@ public abstract class RefObject_1
                                 );
                             } 
                             else if (
-                                this.getModel().isClassType(type) || 
-                                PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
+                                    this.getModel().isClassType(type) || 
+                                    PrimitiveTypes.OBJECT_ID.equals(qualifiedTypeName)
                             ) {
                                 SysLog.warning("initializing of object references not supported", featureDef);
                             } 
@@ -2286,14 +2195,14 @@ public abstract class RefObject_1
         try {
             ModelElement_1_0 elementDef = ((RefMetaObject_1) this.refMetaObject()).getElementDef();
             for (
-                Iterator<ModelElement_1_0> i = ((Map) elementDef.values("allFeature").get(0)).values().iterator(); 
-                i.hasNext();
+                    Iterator<ModelElement_1_0> i = ((Map) elementDef.values("allFeature").get(0)).values().iterator(); 
+                    i.hasNext();
             ) {
                 ModelElement_1_0 featureDef = i.next();
                 if (
-                    this.isAttributeOrReferenceStoredAsAttribute(featureDef) && 
-                    Boolean.TRUE.equals(featureDef.values("isChangeable").get(0)) &&
-                    !isUnmodifiable(featureDef)
+                        this.isAttributeOrReferenceStoredAsAttribute(featureDef) && 
+                        Boolean.TRUE.equals(featureDef.values("isChangeable").get(0)) 
+                     // && !isUnmodifiable(featureDef)
                 ) {
                     this.setValue(featureDef, ((RefObject_1_2) source).getValue(
                         featureDef,
@@ -2323,8 +2232,8 @@ public abstract class RefObject_1
                     null
                 );
                 if (
-                    (container instanceof List) && 
-                    (qualifier instanceof Number)
+                        (container instanceof List) && 
+                        (qualifier instanceof Number)
                 ) {
                     ((List<Object>) container).add(
                         ((Number) qualifier).intValue(),
@@ -2332,8 +2241,8 @@ public abstract class RefObject_1
                     );
                 } 
                 else if (
-                    (container instanceof RefContainer_1) && 
-                    (value instanceof RefObject_1_0)
+                        (container instanceof RefContainer_1) && 
+                        (value instanceof RefObject_1_0)
                 ) {
                     RefContainer_1 refContainer = (RefContainer_1) container;
                     (((RefObject_1_0) value).refDelegate()).objMove(
@@ -2350,13 +2259,11 @@ public abstract class RefObject_1
                     throw new JmiServiceException(
                         new ServiceException(
                             BasicException.Code.DEFAULT_DOMAIN,
-                            StackedException.NOT_SUPPORTED,
-                            new BasicException.Parameter[] {
-                                new BasicException.Parameter(
-                                    "values", container == null ? null : container.getClass().getName()
-                                )
-                            },
-                            "a) feature type = Reference and qualifier is RefObject_1_0; b) feature type = collection type attribute and qualifier is Number"
+                            BasicException.Code.NOT_SUPPORTED,
+                            "a) feature type = Reference and qualifier is RefObject_1_0; b) feature type = collection type attribute and qualifier is Number",
+                            new BasicException.Parameter(
+                                "values", container == null ? null : container.getClass().getName()
+                            )
                         ),
                         this
                     );
@@ -2381,8 +2288,8 @@ public abstract class RefObject_1
             ModelElement_1_0 feature = this.getFeature(featureName);
             // optimized remove. do not marshal Object_1_0 to RefObject
             if (
-                this.getModel().isReferenceType(feature) &&
-                !this.getModel().referenceIsStoredAsAttribute(feature)
+                    this.getModel().isReferenceType(feature) &&
+                    !this.getModel().referenceIsStoredAsAttribute(feature)
             ) {
                 String base = qualifier.toString();
                 String reference = (String) feature.values("name").get(0);
@@ -2391,20 +2298,18 @@ public abstract class RefObject_1
                         throw new ServiceException(
                             BasicException.Code.DEFAULT_DOMAIN,
                             BasicException.Code.NOT_FOUND,
-                            new BasicException.Parameter[] {
-                                new BasicException.Parameter("feature", featureName),
-                                new BasicException.Parameter("qualifier", base)
-                            },
-                            "Attempt to remove an object with a given qualifier while no object is bound to this qualifier"
+                            "Attempt to remove an object with a given qualifier while no object is bound to this qualifier",
+                            new BasicException.Parameter("feature", featureName),
+                            new BasicException.Parameter("qualifier", base)
                         ); 
                     }
                 } 
                 else {
                     RefRootPackage_1 rootPkg = (RefRootPackage_1) this.refClass.refOutermostPackage();
                     rootPkg.refObjectFactory().getObject(
-                        this.refGetPath().getDescendant(new String[] {
+                        this.refGetPath().getDescendant(
                             reference, base
-                        })).objRemove();
+                        )).objRemove();
                 }
             }
             // non-optimized remove
@@ -2420,8 +2325,8 @@ public abstract class RefObject_1
             // object removal handle above
         } 
         else if (
-            (values instanceof List) && 
-            (qualifier instanceof Number)
+                (values instanceof List) && 
+                (qualifier instanceof Number)
         ) {
             ((List<?>) values).remove(((Number) qualifier).intValue());
         } 
@@ -2439,11 +2344,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [List|SparseArray|FilterableMap]"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [List|SparseArray|FilterableMap]",
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -2504,11 +2407,9 @@ public abstract class RefObject_1
             throw new JmiServiceException(
                 new ServiceException(
                     BasicException.Code.DEFAULT_DOMAIN,
-                    StackedException.NOT_SUPPORTED,
-                    new BasicException.Parameter[] {
-                        new BasicException.Parameter("values", values)
-                    },
-                    "operation only supported for features instanceof [Set|List|SparseArray|Container]"
+                    BasicException.Code.NOT_SUPPORTED,
+                    "operation only supported for features instanceof [Set|List|SparseArray|Container]",
+                    new BasicException.Parameter("values", values)
                 ),
                 this
             );
@@ -2534,7 +2435,7 @@ public abstract class RefObject_1
         String feature, 
         EventListener listener
     )
-        throws ServiceException {
+    throws ServiceException {
         this.object.objAddEventListener(feature, listener); // TODO marshalling
     }
 
@@ -2624,16 +2525,16 @@ public abstract class RefObject_1
     ) {
         return getClass().getName() + " delegating to " + this.object;
     }
-    
+
     // -------------------------------------------------------------------------
     public boolean equals(
         Object that
     ) {
         return 
-            that instanceof RefObject_1_0 && 
-            this.object.equals(((RefObject_1_0) that).refDelegate());
+        that instanceof RefObject_1_0 && 
+        this.object.equals(((RefObject_1_0) that).refDelegate());
     }
-    
+
     // -------------------------------------------------------------------------
     /* (non-Javadoc)
      * @see java.lang.Object#hashCode()
@@ -2643,7 +2544,7 @@ public abstract class RefObject_1
         return this.object.hashCode();
     }
 
-    
+
     // -------------------------------------------------------------------------
     // Implements PersistenceCapable
     // -------------------------------------------------------------------------
@@ -2730,7 +2631,7 @@ public abstract class RefObject_1
     ) {
         RefPackage outermostPackage = refOutermostPackage();
         return outermostPackage instanceof RefPackage_1_1 
-            ? ((RefPackage_1_1) outermostPackage).refPersistenceManager()
+        ? ((RefPackage_1_1) outermostPackage).refPersistenceManager()
             : null;
     }
 
@@ -2753,8 +2654,7 @@ public abstract class RefObject_1
      */
     public Object jdoGetVersion(
     ) {
-        // TODO Auto-generated method stub
-        return null;
+        return null; // TODO return the object's digest
     }
 
     // -------------------------------------------------------------------------
@@ -2983,6 +2883,7 @@ public abstract class RefObject_1
     // -------------------------------------------------------------------------
     // Instance members
     // -------------------------------------------------------------------------
+    private static final Object[] EMPTY_OBJECT_ARRAY = new Object[] {};
     private static final String OPENMDX_1_JDO = 
         "This JDO operation is not supported in openMDX 1 compatibility mode";
     private static Model_1_2 model = null;
@@ -2990,7 +2891,7 @@ public abstract class RefObject_1
     private String refMofId = null;
     private transient RefObject metaObject = null;
     private transient ModelElement_1_0 refClassDef = null;
-    
+
     /**
      * @serial
      */
@@ -3000,5 +2901,5 @@ public abstract class RefObject_1
      * @serial
      */
     private RefClass_1_0 refClass;
- 
+
 }
