@@ -1,11 +1,11 @@
 /*
  * ====================================================================
  * Project:     openmdx, http://www.openmdx.org/
- * Name:        $Id: DBOSlicedWithIdAsKey.java,v 1.28 2008/06/30 22:31:47 wfro Exp $
+ * Name:        $Id: DBOSlicedWithIdAsKey.java,v 1.35 2008/12/03 18:26:03 wfro Exp $
  * Description: SlicedDbObjectParentRidOnly class
- * Revision:    $Revision: 1.28 $
+ * Revision:    $Revision: 1.35 $
  * Owner:       OMEX AG, Switzerland, http://www.omex.ch
- * Date:        $Date: 2008/06/30 22:31:47 $
+ * Date:        $Date: 2008/12/03 18:26:03 $
  * ====================================================================
  *
  * This software is published under the BSD license
@@ -63,7 +63,6 @@ import org.openmdx.base.exception.ServiceException;
 import org.openmdx.compatibility.base.collection.SparseList;
 import org.openmdx.compatibility.base.dataprovider.cci.DataproviderObject;
 import org.openmdx.compatibility.base.dataprovider.cci.SystemAttributes;
-import org.openmdx.compatibility.base.exception.StackedException;
 import org.openmdx.compatibility.base.naming.Path;
 import org.openmdx.kernel.exception.BasicException;
 import org.openmdx.kernel.log.SysLog;
@@ -77,7 +76,7 @@ import org.openmdx.model1.code.Multiplicities;
  * compared to the calculation of the object_parent columns.
  */
 public class DBOSlicedWithIdAsKey
-  extends SlicedDbObject 
+extends SlicedDbObject 
 {
 
     //-------------------------------------------------------------------------
@@ -92,7 +91,7 @@ public class DBOSlicedWithIdAsKey
             typeConfiguration
         );
     }
-    
+
     //-------------------------------------------------------------------------
     public DBOSlicedWithIdAsKey(
         AbstractDatabase_1 database,
@@ -112,23 +111,26 @@ public class DBOSlicedWithIdAsKey
         );
         String rid = (String)this.database.getReferenceId(
             conn, 
-            this.reference, 
+            this.getReference(), 
             false
+        );
+        String oid = this.database.getObjectId(
+            conn, 
+            this.getResourceIdentifier()
         );
         // oid
         this.objectIdValues.clear();
-        this.objectIdValues.add(
-            rid + "/" + this.getObjectId()
-        );
+        this.objectIdValues.add(oid);
         this.objectIdClause = "(v." + database.OBJECT_ID + " = ?)";
         this.objectIdColumn.clear();
         this.objectIdColumn.add(database.OBJECT_ID);
         if(isExtent) {
             this.referenceValues.clear();
+            String base = accessPath.getBase();
             this.referenceValues.add(
-                accessPath.endsWith(new String[]{"%"}) || accessPath.endsWith(new String[]{":*"}) 
-                    ? rid + "/%" 
-                    : rid
+                base.equals("%") || base.equals(":*") ? 
+                    rid + "/%" : 
+                        rid
             );
             this.referenceClause = "(v." + database.OBJECT_ID + " LIKE ? " + this.database.getEscapeClause(conn) + ")";
         }
@@ -170,13 +172,11 @@ public class DBOSlicedWithIdAsKey
                 }
             }
             else {
-                String parentRid = (String)this.database.getReferenceId(
-                    conn, 
-                    this.reference.getParent().getParent(),
-                    false
-                );        
                 this.referenceValues.add(
-                    parentRid + "/" + this.reference.getParent().getBase()
+                    this.database.getObjectId(
+                        conn,
+                        this.getReference().getParent()
+                    )
                 );
                 // Default join with composite parent. Otherwise use configured join column
                 this.referenceClause = "(vj." + this.getJoinCriteria()[1] + " = ?)";            
@@ -187,56 +187,85 @@ public class DBOSlicedWithIdAsKey
         this.indexColumn = null;
         this.excludeAttributes.add("objectIdx");        
     }
-    
+
     //---------------------------------------------------------------------------  
     @Override
     public Path getObjectReference(
         FastResultSet frs
     ) throws SQLException, ServiceException {      
-        String objectId = (String)frs.getObject("object_id");
-        if(objectId == null) {
-            throw new SQLException(
-                "column object_id in result set not found"
-            );
-        }
-        // Map objectId to reference
-        else {          
-            return this.database.getReference(
-                conn,
-                objectId.substring(0, objectId.lastIndexOf("/"))
-            );
+        if(this.database.configuration.normalizeObjectIds()) {
+            return getResourceIdentifier().getParent();
+        } else {
+            String objectId = (String)frs.getObject("object_id");
+            if(objectId == null) {
+                throw new SQLException(
+                    "column object_id in result set not found"
+                );
+            }
+            // Map objectId to reference
+            else {          
+                return this.database.getReference(
+                    conn,
+                    objectId.substring(0, objectId.lastIndexOf("/"))
+                );
+            }
         }
     }
-      
+
     //---------------------------------------------------------------------------  
     @Override
     public String getObjectId(
         FastResultSet frs
     ) throws SQLException {
-      String objectId = (String)frs.getObject("object_id");
-      if(objectId == null) {
-          throw new SQLException(
-              "column object_id in result set not found"
-          );
-      }
-      // oid is last component of object_id
-      else {    
-          return objectId.substring(objectId.lastIndexOf("/")+1);
-      }
+        if(this.database.configuration.normalizeObjectIds()) {
+            return getResourceIdentifier().getBase();
+        } else {
+            String objectId = (String)frs.getObject("object_id");
+            if(objectId == null) {
+                throw new SQLException(
+                    "column object_id in result set not found"
+                );
+            }
+            // oid is last component of object_id
+            else {    
+                return objectId.substring(objectId.lastIndexOf("/")+1);
+            }
+        }
     }
-          
+
+    //---------------------------------------------------------------------------  
+    /* (non-Javadoc)
+     * @see org.openmdx.compatibility.base.dataprovider.layer.persistence.jdbc.DbObject#getResourceIdentifier(org.openmdx.compatibility.base.dataprovider.layer.persistence.jdbc.FastResultSet)
+     */
+    @Override
+    public Path getResourceIdentifier(
+        FastResultSet frs
+    ) throws SQLException, ServiceException {
+        if(this.database.configuration.normalizeObjectIds()) {
+            String objectId = (String)frs.getObject("object_id");
+            if(objectId == null) {
+                throw new SQLException(
+                    "column object_id in result set not found"
+                );
+            }
+            return this.database.configuration.buildResourceIdentifier(objectId, false);
+        } else {
+            return super.getResourceIdentifier(frs);
+        }        
+    }
+
     //---------------------------------------------------------------------------  
     @Override
     public boolean includeColumn(
         String columnName
     ) {
         return 
-          !"object_id".equalsIgnoreCase(columnName) &&
-          !this.database.OBJECT_IDX.equalsIgnoreCase(columnName) &&
-          !columnName.toLowerCase().startsWith(this.database.privateAttributesPrefix) &&
-          !columnName.endsWith("_");
+        !"object_id".equalsIgnoreCase(columnName) &&
+        !this.database.OBJECT_IDX.equalsIgnoreCase(columnName) &&
+        !columnName.toLowerCase().startsWith(this.database.privateAttributesPrefix) &&
+        !columnName.endsWith("_");
     }
-      
+
     //---------------------------------------------------------------------------  
     @Override
     public int getIndex(
@@ -249,146 +278,157 @@ public class DBOSlicedWithIdAsKey
             return 0;
         }
     }
-          
+
     //-------------------------------------------------------------------------
     @Override
     public void remove(
     ) throws ServiceException {
-      
-      PreparedStatement ps = null;
-      String currentStatement = null;
-      Path accessPath = this.reference.getChild(this.objectId);
-      Path type = this.getConfiguration().getType();
-      List<String> dbObjects = new ArrayList<String>();
-      if(this.getConfiguration().getDbObjectForUpdate1() != null) {
-          dbObjects.add(
-              this.getConfiguration().getDbObjectForUpdate1()
-          );
-      }
-      if(this.getConfiguration().getDbObjectForUpdate2() != null) {
-          dbObjects.add(
-              this.getConfiguration().getDbObjectForUpdate2()
-          );
-      }
-      try {
-          for(
-              Iterator<String> i = dbObjects.iterator();
-              i.hasNext();
-          ) {
-              String dbObject = i.next();          
-              // Object (only if dbObject (=table) is configured)
-              if(
-                  ((type.size() == 1) || // catch all type
-                  (type.size() == accessPath.size() && accessPath.isLike(type)))
-              ) {
-                  List<Object> statementParameters = new ArrayList<Object>();
-                  statementParameters.addAll(
-                      this.getObjectIdValues()
-                  );
-                  String statement =
-                      "DELETE FROM " + dbObject + " WHERE " + this.database.OBJECT_ID + " IN (?)";
-                  ps = this.database.prepareStatement(
-                      conn,
-                      currentStatement = statement
-                  );
-                  for(int j = 0; j < statementParameters.size(); j++) {
-                      this.database.setPreparedStatementValue(
-                          this.conn,
-                          ps, 
-                          j+1, 
-                          statementParameters.get(j)
-                      );
-                  }
-                  SysLog.detail("statement", currentStatement);
-                  ps.executeUpdate();
-                  this.database.executeBatch(ps);
-                  ps.close(); ps = null;
-              }
-              // Composite objects (only if dbObject (=table) is configured)
-              if(
-                  ((type.size() == 1) || // catch all type
-                  ((type.size() > accessPath.size()) && accessPath.isLike(type.getPrefix(accessPath.size()))))
-              ) {
-                  List<Object> statementParameters = new ArrayList<Object>();
-                  Object rid = this.database.getReferenceId(
-                      this.conn,
-                      accessPath.getDescendant(type.getSuffix(accessPath.size())),
-                      false
-                  );
-                  String statement = null;
-                  if((rid instanceof String) && ((String)rid).endsWith("%")) {
-                      statement = "DELETE FROM " + dbObject + " WHERE " + this.database.OBJECT_ID + " LIKE ?"; 
-                      statementParameters.add(rid);
-                  }
-                  else {
-                      statement = "DELETE FROM " + dbObject + " WHERE (" + this.database.OBJECT_ID + " > ?) AND (" + this.database.OBJECT_ID + " < ?)";                       
-                      statementParameters.add(rid  + "/");
-                      statementParameters.add(rid  + "0");
-                  }
-                  ps = this.database.prepareStatement(
-                      conn,
-                      currentStatement = statement
-                  );
-                  for(int j = 0; j < statementParameters.size(); j++) {
-                      this.database.setPreparedStatementValue(
-                          this.conn,
-                          ps, 
-                          j+1, 
-                          statementParameters.get(j)
-                      );
-                  }
-                  SysLog.detail("statement", currentStatement);
-                  SysLog.detail("parameters", statementParameters);
-                  ps.executeUpdate();
-                  this.database.executeBatch(ps);
-                  ps.close(); ps = null;
-              }
-          }
-      }
-      catch(SQLException ex) {
-          throw new ServiceException(
-              ex, 
-              StackedException.DEFAULT_DOMAIN,
-              StackedException.MEDIA_ACCESS_FAILURE, 
-              new BasicException.Parameter[]{
-                  new BasicException.Parameter("path", accessPath),
-                  new BasicException.Parameter("statement", currentStatement)
-              },
-              null
-          );
-      }
-      catch(ServiceException e) {
-          throw e;
-      }
-      catch(Exception ex) {
-          throw new ServiceException(
-              ex, 
-              StackedException.DEFAULT_DOMAIN,
-              StackedException.GENERIC, 
-              null, 
-              ex.toString()
-          );
-      }
-      finally {
-          try {
-              if(ps != null) ps.close();
-          } catch(Throwable ex) {
-              // ignore
-          }
-      }
+
+        PreparedStatement ps = null;
+        String currentStatement = null;
+        Path accessPath = this.getResourceIdentifier();
+        Path type = this.getConfiguration().getType();
+        List<String> dbObjects = new ArrayList<String>();
+        if(this.getConfiguration().getDbObjectForUpdate1() != null) {
+            dbObjects.add(
+                this.getConfiguration().getDbObjectForUpdate1()
+            );
+        }
+        if(this.getConfiguration().getDbObjectForUpdate2() != null) {
+            dbObjects.add(
+                this.getConfiguration().getDbObjectForUpdate2()
+            );
+        }
+        try {
+            for(
+                Iterator<String> i = dbObjects.iterator();
+                i.hasNext();
+            ) {
+                String dbObject = i.next();          
+                // Object (only if dbObject (=table) is configured)
+                if(
+                    ((type.size() == 1) || // catch all type
+                    (type.size() == accessPath.size() && accessPath.isLike(type)))
+                ) {
+                    List<Object> statementParameters = new ArrayList<Object>();
+                    statementParameters.addAll(
+                        this.getObjectIdValues()
+                    );
+                    String statement =
+                        "DELETE FROM " + dbObject + " WHERE " + this.database.OBJECT_ID + " IN (?)";
+                    ps = this.database.prepareStatement(
+                        conn,
+                        currentStatement = statement
+                    );
+                    for(int j = 0; j < statementParameters.size(); j++) {
+                        this.database.setPreparedStatementValue(
+                            this.conn,
+                            ps, 
+                            j+1, 
+                            statementParameters.get(j)
+                        );
+                    }
+                    SysLog.detail("statement", currentStatement);
+                    ps.executeUpdate();
+                    ps.close(); ps = null;
+                }
+                // Composite objects (only if dbObject (=table) is configured)
+                if(
+                    ((type.size() == 1) || // catch all type
+                    ((type.size() > accessPath.size()) && accessPath.isLike(type.getPrefix(accessPath.size()))))
+                ) {
+                    List<Object> statementParameters = new ArrayList<Object>();
+                    Object rid = this.database.getReferenceId(
+                        this.conn,
+                        accessPath.getDescendant(type.getSuffix(accessPath.size())),
+                        false
+                    );
+                    String statement = null;
+                    String databaseProductName = "N/A";
+                    try {
+                        DatabaseMetaData dbm = this.conn.getMetaData();
+                        databaseProductName = dbm.getDatabaseProductName();
+                    } catch(Exception e) {}
+                    String useLikeForOidMatching = System.getProperty(
+                        "org.openmdx.persistence.jdbc.useLikeForOidMatching",
+                        Boolean.toString(databaseProductName.startsWith("PostgreSQL"))
+                    );
+                    String ridAsString = rid.toString();
+                    if(Boolean.valueOf(useLikeForOidMatching).booleanValue()) {    		
+                        statement = "DELETE FROM " + dbObject + " WHERE " + this.database.OBJECT_ID + " LIKE ?"; 
+                        statementParameters.add(ridAsString.endsWith("%") ? ridAsString : ridAsString + "%");
+                    }
+                    else {
+                        if(ridAsString.endsWith("/%")) {
+                            ridAsString = ridAsString.substring(0, ridAsString.length() - 2);
+                        }
+                        else if(ridAsString.endsWith("/")) {
+                            ridAsString = ridAsString.substring(0, ridAsString.length() - 1);
+                        }
+                        statement = "DELETE FROM " + dbObject + " WHERE (" + this.database.OBJECT_ID + " > ?) AND (" + this.database.OBJECT_ID + " < ?)";                       
+                        statementParameters.add(ridAsString + "/");
+                        statementParameters.add(ridAsString + "0");
+                    }
+                    ps = this.database.prepareStatement(
+                        this.conn,
+                        currentStatement = statement
+                    );
+                    for(int j = 0; j < statementParameters.size(); j++) {
+                        this.database.setPreparedStatementValue(
+                            this.conn,
+                            ps, 
+                            j+1, 
+                            statementParameters.get(j)
+                        );
+                    }
+                    SysLog.detail("statement", currentStatement);
+                    SysLog.detail("parameters", statementParameters);
+                    ps.executeUpdate();
+                    ps.close(); ps = null;
+                }
+            }
+        }
+        catch(SQLException ex) {
+            throw new ServiceException(
+                ex, 
+                BasicException.Code.DEFAULT_DOMAIN,
+                BasicException.Code.MEDIA_ACCESS_FAILURE, 
+                null,
+                new BasicException.Parameter("path", accessPath),
+                new BasicException.Parameter("statement", currentStatement)
+            );
+        }
+        catch(ServiceException e) {
+            throw e;
+        }
+        catch(Exception ex) {
+            throw new ServiceException(
+                ex, 
+                BasicException.Code.DEFAULT_DOMAIN,
+                BasicException.Code.GENERIC, 
+                ex.toString()
+            );
+        }
+        finally {
+            try {
+                if(ps != null) ps.close();
+            } catch(Throwable ex) {
+                // ignore
+            }
+        }
     }
-      
+
     //---------------------------------------------------------------------------
     @SuppressWarnings("unchecked")
     @Override
     public DataproviderObject[] sliceAndNormalizeObject(
         DataproviderObject object
     ) throws ServiceException {
-    
+
         DbObjectConfiguration dbObjectConfiguration = this.getConfiguration();    
         DataproviderObject normalizedObject = new DataproviderObject(new Path(""));
         int pathNormalizeLevel = dbObjectConfiguration.getPathNormalizeLevel();
-                 
+
         // Add size attributes
         if(this.database.isSetSizeColumns()) {
             ModelElement_1_0 classDef = this.database.model.getElement(
@@ -398,8 +438,8 @@ public class DBOSlicedWithIdAsKey
                 String featureName = (String)feature.values("name").get(0);
                 String featureQualifiedName = (String)feature.values("qualifiedName").get(0);                
                 if(
-                    !this.database.embeddedFeatures.containsKey(featureName) &&
-                    !this.database.nonPersistentFeatures.contains(featureQualifiedName)
+                        !this.database.embeddedFeatures.containsKey(featureName) &&
+                        !this.database.nonPersistentFeatures.contains(featureQualifiedName)
                 ) {                
                     String multiplicity = (String)feature.values("multiplicity").get(0);
                     // multi-valued reference?
@@ -412,10 +452,10 @@ public class DBOSlicedWithIdAsKey
                         }
                     }
                     if(                    
-                        Multiplicities.MULTI_VALUE.equals(multiplicity) ||
-                        Multiplicities.LIST.equals(multiplicity) ||
-                        Multiplicities.SET.equals(multiplicity) ||
-                        Multiplicities.SPARSEARRAY.equals(multiplicity)                    
+                            Multiplicities.MULTI_VALUE.equals(multiplicity) ||
+                            Multiplicities.LIST.equals(multiplicity) ||
+                            Multiplicities.SET.equals(multiplicity) ||
+                            Multiplicities.SPARSEARRAY.equals(multiplicity)                    
                     ) {
                         SparseList<?> source = object.getValues(featureName); 
                         SparseList target = object.clearValues(
@@ -433,131 +473,125 @@ public class DBOSlicedWithIdAsKey
             if(this.database.model.isSubtypeOf(classDef, "org:openmdx:base:BasicObject")) {
                 String featureName = SystemAttributes.CREATED_BY;
                 object.clearValues(featureName + "_").add(
-                    object.getValues(featureName) == null
-                        ? new Integer(0)
-                        : new Integer(object.values(featureName).size())
+                    Integer.valueOf(object.getValues(featureName) == null ? 0 : object.values(featureName).size())
                 );
                 featureName = SystemAttributes.MODIFIED_BY;
                 object.clearValues(featureName + "_").add(
-                    object.getValues(featureName) == null
-                        ? new Integer(0)
-                        : new Integer(object.values(featureName).size())
+                    Integer.valueOf(object.getValues(featureName) == null ? 0 : object.values(featureName).size())
                 );
             }
         }
-        
+
         // Add parent id 
         if(pathNormalizeLevel > 0) {  
-          Path parentObjectPath = object.path().getPrefix(object.path().size()-2);    
-          if(parentObjectPath.size() >= 5) {
-              normalizedObject.values(this.database.privateAttributesPrefix + "parent").add(
-                  this.database.getReferenceId(
-                      conn, 
-                      parentObjectPath, 
-                      true 
-                  ) + "/" + parentObjectPath.getBase()
-              );
-          }
-    
-          // Add id for all attributes with values of type path
-          if(pathNormalizeLevel > 1) {    
-            for(
-              Iterator<String> i = object.attributeNames().iterator();
-              i.hasNext();
-            ) {
-              String attributeName = i.next();
-              List<Object> values = object.values(attributeName);
-              if((values.size() > 0) && (values.get(0) instanceof Path)) {
+            Path parentObjectPath = object.path().getPrefix(object.path().size()-2);    
+            if(parentObjectPath.size() >= 5) {
+                normalizedObject.values(this.database.privateAttributesPrefix + "parent").add(
+                    this.database.getReferenceId(
+                        conn, 
+                        parentObjectPath, 
+                        true 
+                    ) + "/" + parentObjectPath.getBase()
+                );
+            }
+
+            // Add id for all attributes with values of type path
+            if(pathNormalizeLevel > 1) {    
                 for(
-                  Iterator<Object> j = values.iterator();
-                  j.hasNext();
+                        Iterator<String> i = object.attributeNames().iterator();
+                        i.hasNext();
                 ) {
-                  Object v = j.next();
-                  if(!(v instanceof Path)) {
-                    throw new ServiceException(
-                      StackedException.DEFAULT_DOMAIN,
-                      StackedException.ASSERTION_FAILURE, 
-                      new BasicException.Parameter[]{
-                        new BasicException.Parameter("attribute", attributeName),
-                        new BasicException.Parameter("value class", (v == null ? "null" : v.getClass().getName())),
-                        new BasicException.Parameter("value", v)
-                      },
-                      "value of attribute expected to be instance of path"
-                    );
-                  }
-                  Path objectPath = (Path)v;
-                  normalizedObject.values(attributeName).add(
-                      this.database.getReferenceId(
-                          conn, 
-                          objectPath, 
-                          true
-                      ) + "/" + objectPath.getBase()
-                  );
-                  
-                  // add parent id of path value
-                  if(pathNormalizeLevel > 2) {
-                    Path parentPath = objectPath.getPrefix(objectPath.size()-2);
-                    if(parentPath.size() >= 5) {
-                        normalizedObject.values(this.database.privateAttributesPrefix + attributeName + "Parent").add(
-                            this.database.getReferenceId(
-                                conn, 
-                                parentPath, 
-                                true
-                            ) + "/" + parentPath.getBase()
-                        );
+                    String attributeName = i.next();
+                    List<Object> values = object.values(attributeName);
+                    if((values.size() > 0) && (values.get(0) instanceof Path)) {
+                        for(
+                                Iterator<Object> j = values.iterator();
+                                j.hasNext();
+                        ) {
+                            Object v = j.next();
+                            if(!(v instanceof Path)) {
+                                throw new ServiceException(
+                                    BasicException.Code.DEFAULT_DOMAIN,
+                                    BasicException.Code.ASSERTION_FAILURE, 
+                                    "value of attribute expected to be instance of path",
+                                    new BasicException.Parameter("attribute", attributeName),
+                                    new BasicException.Parameter("value class", (v == null ? "null" : v.getClass().getName())),
+                                    new BasicException.Parameter("value", v)
+                                );
+                            }
+                            Path objectPath = (Path)v;
+                            normalizedObject.values(attributeName).add(
+                                this.database.getReferenceId(
+                                    conn, 
+                                    objectPath, 
+                                    true
+                                ) + "/" + objectPath.getBase()
+                            );
+
+                            // add parent id of path value
+                            if(pathNormalizeLevel > 2) {
+                                Path parentPath = objectPath.getPrefix(objectPath.size()-2);
+                                if(parentPath.size() >= 5) {
+                                    normalizedObject.values(this.database.privateAttributesPrefix + attributeName + "Parent").add(
+                                        this.database.getReferenceId(
+                                            conn, 
+                                            parentPath, 
+                                            true
+                                        ) + "/" + parentPath.getBase()
+                                    );
+                                }
+                            }
+                        }
                     }
-                  }
-                }
-              }
-            } 
-          }
+                } 
+            }
         }
         object.addClones(normalizedObject, false);
-        
+
         /**
          * Slice object
          */
         // get number of partitions
         int maxSize = 0;
         for(
-          Iterator<String> i = object.attributeNames().iterator();
-          i.hasNext();
+                Iterator<String> i = object.attributeNames().iterator();
+                i.hasNext();
         ) {
-          String attributeName = i.next();
-          maxSize = java.lang.Math.max(maxSize, object.values(attributeName).size());
+            String attributeName = i.next();
+            maxSize = java.lang.Math.max(maxSize, object.values(attributeName).size());
         }
-        
+
         // Create partitioned objects
         DataproviderObject[] slices = new DataproviderObject[maxSize];
         for(
-          Iterator<String> i = object.attributeNames().iterator();
-          i.hasNext();
+                Iterator<String> i = object.attributeNames().iterator();
+                i.hasNext();
         ) {
-          String attributeName = i.next();            
-          for(
-            int j = 0; 
-            j < object.values(attributeName).size();
-            j++
-          ) {
-            if(slices[j] == null) {
-                slices[j] = new DataproviderObject(object.path());
+            String attributeName = i.next();            
+            for(
+                    int j = 0; 
+                    j < object.values(attributeName).size();
+                    j++
+            ) {
+                if(slices[j] == null) {
+                    slices[j] = new DataproviderObject(object.path());
+                }
+                // Embedded features are mapped to slice 0
+                if(this.database.embeddedFeatures.containsKey(attributeName)) {
+                    slices[0].values(attributeName + "_" + j).add(
+                        object.values(attributeName).get(j)
+                    );
+                }
+                // Map to slice with corresponding index
+                else {                            
+                    slices[j].values("objectIdx").add(
+                        Integer.valueOf(j)
+                    );
+                    slices[j].values(attributeName).add(
+                        object.values(attributeName).get(j)
+                    );
+                }
             }
-            // Embedded features are mapped to slice 0
-            if(this.database.embeddedFeatures.containsKey(attributeName)) {
-                slices[0].values(attributeName + "_" + j).add(
-                    object.values(attributeName).get(j)
-                );
-            }
-            // Map to slice with corresponding index
-            else {                            
-                slices[j].values("objectIdx").add(
-                    new Integer(j)
-                );
-                slices[j].values(attributeName).add(
-                  object.values(attributeName).get(j)
-                );
-            }
-          }
         }
         return slices;
     }
@@ -565,15 +599,15 @@ public class DBOSlicedWithIdAsKey
     //---------------------------------------------------------------------------
     @Override
     protected String toObjectIdQuery (
-      Path path
+        Path path
     ) throws ServiceException {
         Object rid = this.database.getReferenceId(this.conn, path, true);
         String pathComponentQuery = path.getBase();
         return pathComponentQuery.startsWith(":") && pathComponentQuery.endsWith("*") 
-            ? rid + "/" + pathComponentQuery.substring(1, pathComponentQuery.length() - 1) + '%' 
+        ? rid + "/" + pathComponentQuery.substring(1, pathComponentQuery.length() - 1) + '%' 
             : rid + "/" + pathComponentQuery;
     }
-  
+
     //-------------------------------------------------------------------------
     private static final long serialVersionUID = 4076702439130733210L;
 
